--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
 #map {
+	position: fixed;
+ 	width: 100%;
+ 	height: 95%;
+ 	margin: 0;
+ 	z-index: 1;
+}
+
+.menu-btn {
+	padding-top: 17px;
+}
+
+.menu-btn span {
+	display: block;
+	width: 19px;
+	height: 3px;
+	margin: 4px 0 0 90%;
+	background: rgb(0,0,0);
+	z-index: 99;
+	text-align: right;
+}
+
+.menu {
+	position: fixed;
+	display: inline-block;
+	background-color: rgba(200,200,200,0.5);
+	width: 25%;
 	height: 100%;
+	margin: 0;
+	z-index: 2;
+}
+
+
+header {
+	height: 8%;
+	background-color: rgb(53, 94, 162);
 }
